--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/CFGtoTAC/test/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/CFGtoTAC/test/CMakeLists.txt
@@ -24,3 +24,5 @@ csharp_add_dependencies(
   ${CMAKE_LIBRARY_OUTPUT_DIR}/Mono.Cecil.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/nunit.framework.dll
   )
+
+add_subdirectory(TestCases)
