Tag the project as NONE, because it defaulted to CPP and caused extra checks for C++ compilers and stuff we don't need.

--- a/SolidOpt/trunk/CMakeLists.txt
+++ b/SolidOpt/trunk/CMakeLists.txt
@@ -4,7 +4,9 @@
 ## For further details see the nearest License.txt
 ##
 
-project(SolidOpt)
+# TODO: Implement it as project(SolidOpt CS), it should need just renaming of
+# the existing modules
+project(SolidOpt NONE)
 
 cmake_minimum_required(VERSION 2.6.2)
 
