In order to make doxygen documentation be built standalone we have to support configuration of documentation folder independently (for now it is independent on) from the rest. I.e cmake ../trunk/doc has to result in success and we have to be able to type make doxygen and it has to work.
In order to do that we changed CMAKE_SOURCE_DIR in doxygen.conf.in to a custom
variable - DOXYGEN_INPUT_DIR where we could invoke 
cmake ../trunk/doc/ -DDOXYGEN_INPUT_DIR=/path/to/src/

--- a/SolidOpt/trunk/CMakeLists.txt
+++ b/SolidOpt/trunk/CMakeLists.txt
@@ -70,6 +70,10 @@ ENDIF(BUILD_TESTING)
 
 # ...
 add_subdirectory(src)
+# FIXME:
+# This is a bit hackish way, but it adds support for configuring just docs
+# it is needed by our online doxygen system.
+set(DOXYGEN_INPUT_DIR ${CMAKE_SOURCE_DIR})
 add_subdirectory(doc)
 
 # Resolve all target dependencies
