--- a/SolidOpt/trunk/doc/CMakeLists.txt
+++ b/SolidOpt/trunk/doc/CMakeLists.txt
@@ -4,39 +4,43 @@
 ## For further details see the nearest License.txt
 ##
 
+# Those two are relevant when configuring just docs standalone
+project(SolidOpt NONE)
+cmake_minimum_required(VERSION 2.6.2)
+
 find_package(Doxygen)
 if (DOXYGEN_FOUND)
   configure_file(
     ${CMAKE_CURRENT_SOURCE_DIR}/doxygen/conf/doxygen.conf.in 
-    ${PROJECT_BINARY_DIR}/doc/doxygen.conf
+    ${PROJECT_BINARY_DIR}/doxygen/doxygen.conf
     @ONLY
     )
   configure_file(
     ${CMAKE_CURRENT_SOURCE_DIR}/doxygen/conf/custom.css 
-    ${PROJECT_BINARY_DIR}/doc/custom.css
+    ${PROJECT_BINARY_DIR}/doxygen/custom.css
     COPYONLY
     )
   configure_file(
     ${CMAKE_CURRENT_SOURCE_DIR}/doxygen/conf/doxygen.intro.in 
-    ${PROJECT_BINARY_DIR}/doc/doxygen.intro
+    ${PROJECT_BINARY_DIR}/doxygen/doxygen.intro
     @ONLY
     )
   configure_file(
     ${CMAKE_CURRENT_SOURCE_DIR}/doxygen/conf/header.html.in 
-    ${PROJECT_BINARY_DIR}/doc/header.html
+    ${PROJECT_BINARY_DIR}/doxygen/header.html
     @ONLY
     )
   configure_file(
     ${CMAKE_CURRENT_SOURCE_DIR}/doxygen/conf/footer.html.in 
-    ${PROJECT_BINARY_DIR}/doc/footer.html
+    ${PROJECT_BINARY_DIR}/doxygen/footer.html
     @ONLY
     )
   add_custom_target(
     doxygen
     COMMAND ${DOXYGEN_EXECUTABLE}
-    "${PROJECT_BINARY_DIR}/doc/doxygen.conf"
+    "${PROJECT_BINARY_DIR}/doxygen/doxygen.conf"
     WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-    SOURCES "${CMAKE_SOURCE_DIR}"
+    SOURCES "${DOXYGEN_INPUT_DIR}"
     COMMENT "Generating API documentation with Doxygen" VERBATIM
     )
 #  install(DIRECTORY "${PROJECT_BINARY_DIR}/docs/"
