Add very raw initial implementation of ControlFlowGraph to IntermediateLanguage. Add base test infrastructure.

--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/CMakeLists.txt
@@ -21,6 +21,7 @@ csharp_add_dependencies(
   )
 
 add_subdirectory(ASTtoIL)
+add_subdirectory(CFGtoIL)
 add_subdirectory(CFGtoTAC)
 add_subdirectory(ILtoAST)
 add_subdirectory(ILtoCFG)
