Move the BaseTestFixture in Transformations, because it generic enough to be used by the multimodel transformations and the optimizations.

--- a/SolidOpt/trunk/src/Services/Transformations/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/CMakeLists.txt
@@ -17,4 +17,5 @@ csharp_add_dependencies(
 add_subdirectory(CodeModel)
 add_subdirectory(Multimodel)
 add_subdirectory(Optimizations)
+add_subdirectory(test)
 
