--- a/SolidOpt/trunk/src/Services/Transformations/test/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/test/CMakeLists.txt
@@ -5,13 +5,12 @@
 ##
 
 csharp_add_library(
-  SolidOpt.Services.Transformations.MultiModel.Test
+  SolidOpt.Services.Transformations.Test
   ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
   #${CMAKE_CURRENT_BINARY_DIR}/AssemblyInfo.cs
   )
 csharp_add_dependencies(
-  SolidOpt.Services.Transformations.MultiModel.Test
-  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.MultiModel.dll
+  SolidOpt.Services.Transformations.Test
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.BuildInformation.dll
   # Monodevelop 2.8 compatibility
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.dll
