--- a/Tools/SolidReflector/trunk/src/SolidReflector.csproj
+++ b/Tools/SolidReflector/trunk/src/SolidReflector.csproj
@@ -82,29 +82,29 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\SolidOpt\trunk\src\vendors\Mono.Cecil\Mono.Cecil.csproj">
+    <ProjectReference Include="vendors\SolidOpt\src\vendors\Mono.Cecil\Mono.Cecil.csproj">
       <Project>{D68133BD-1E63-496E-9EDE-4FBDBF77B486}</Project>
       <Name>Mono.Cecil</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\..\SolidOpt\trunk\src\Services\SolidOpt.Services.csproj">
-      <Project>{c41b5fb4-dae9-4a27-9d15-55109ab79660}</Project>
+    <ProjectReference Include="vendors\SolidOpt-build\src\Services\SolidOpt.Services.csproj">
+      <Project>{DC1FA76E-6AD8-407D-A48F-AE01C4BE46A7}</Project>
       <Name>SolidOpt.Services</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\..\SolidOpt\trunk\src\Services\Transformations\CodeModel\ControlFlowGraph\SolidOpt.Services.ControlFlowGraph.csproj">
-      <Project>{43A760A8-E789-4E27-A3C3-182CD847D07C}</Project>
-      <Name>SolidOpt.Services.ControlFlowGraph</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\..\SolidOpt\trunk\src\Services\Transformations\Multimodel\SolidOpt.Services.Multimodel.csproj">
-      <Project>{02e6657d-3102-4d7e-94b5-6b38a0e34a86}</Project>
-      <Name>SolidOpt.Services.Multimodel</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\..\SolidOpt\trunk\src\Services\Transformations\CodeModel\ThreeAddressCode\SolidOpt.Services.ThreeAddressCode.csproj">
-      <Project>{D1E7E58A-C1F7-4684-8E71-68D5A5BDCC25}</Project>
-      <Name>SolidOpt.Services.ThreeAddressCode</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\..\SolidOpt\trunk\src\Services\Transformations\SolidOpt.Services.Transformations.csproj">
-      <Project>{6ea875ad-4277-4ef6-8d5c-03a0995db7fd}</Project>
+    <ProjectReference Include="vendors\SolidOpt-build\src\Services\Transformations\SolidOpt.Services.Transformations.csproj">
+      <Project>{031D389E-9AAB-4275-99F7-33EE3C360DA3}</Project>
       <Name>SolidOpt.Services.Transformations</Name>
+    </ProjectReference>
+    <ProjectReference Include="vendors\SolidOpt-build\src\Services\Transformations\CodeModel\ControlFlowGraph\src\SolidOpt.Services.Transformations.CodeModel.ControlFlowGraph.csproj">
+      <Project>{AF433D39-0740-4646-A4ED-FD6CCEC8710B}</Project>
+      <Name>SolidOpt.Services.Transformations.CodeModel.ControlFlowGraph</Name>
+    </ProjectReference>
+    <ProjectReference Include="vendors\SolidOpt-build\src\Services\Transformations\CodeModel\ThreeAddressCode\src\SolidOpt.Services.Transformations.CodeModel.ThreeAddressCode.csproj">
+      <Project>{BEE08EEC-7B59-42F3-B94B-792B4F0D7CAB}</Project>
+      <Name>SolidOpt.Services.Transformations.CodeModel.ThreeAddressCode</Name>
+    </ProjectReference>
+    <ProjectReference Include="vendors\SolidOpt-build\src\Services\Transformations\Multimodel\SolidOpt.Services.Transformations.MultiModel.csproj">
+      <Project>{2D84D3FC-4BEA-4777-B170-0233E7146E6E}</Project>
+      <Name>SolidOpt.Services.Transformations.MultiModel</Name>
     </ProjectReference>
   </ItemGroup>
 </Project>
