--- a/SolidV/trunk/src/SolidV.csproj
+++ b/SolidV/trunk/src/SolidV.csproj
@@ -76,6 +76,8 @@
     <Compile Include="MVC\Controller\VisualCodeControllers\SelectionController.cs" />
     <Compile Include="MVC\Controller\VisualCodeControllers\ShapeSelectionController.cs" />
     <Compile Include="MVC\View\VisualCodeViewers\SelectionModelViewer.cs" />
+    <Compile Include="MVC\Model\VisualCodeModels\TextBlockShape.cs" />
+    <Compile Include="MVC\View\VisualCodeViewers\TextBlockShapeViewer.cs" />
     <Compile Include="MVC\Controller\VisualCodeControllers\ShapeDragController.cs" />
     <Compile Include="MVC\Model\VisualCodeModels\PolylineArrowShape.cs" />
     <Compile Include="MVC\View\VisualCodeViewers\PolylineArrowShapeViewer.cs" />
